# xerrion-tts-service-lambda

./: .gitignore  LICENSE.md  README.md  lambda_function.py  pyproject.toml
